--- a/Hawaii/Base.lproj/Main.storyboard
+++ b/Hawaii/Base.lproj/Main.storyboard
@@ -44,6 +44,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="signInButton" destination="9vU-hD-ZET" id="Rwb-hS-cft"/>
                         <segue destination="Q5z-e0-pWt" kind="show" identifier="homeVCSegue" id="mCK-NL-yPc"/>
                     </connections>
                 </viewController>
