--- a/Hawaii/UI/EmptyView/EmptyView.xib
+++ b/Hawaii/UI/EmptyView/EmptyView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,54 +13,39 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmptyView" customModule="Hawaii" customModuleProvider="target">
             <connections>
                 <outlet property="backgroundImage" destination="ula-a8-tAA" id="SJP-EO-k9z"/>
-                <outlet property="descLabel" destination="M11-1q-Tet" id="dHX-Ma-H5B"/>
                 <outlet property="titleLabel" destination="w8h-3w-qwg" id="UPe-Bg-jJX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M11-1q-Tet">
-                    <rect key="frame" x="30" y="235.66666666666666" width="354" height="20.333333333333343"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
-                    </userDefinedRuntimeAttributes>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8h-3w-qwg">
-                    <rect key="frame" x="30" y="185.66666666666666" width="354" height="20.333333333333343"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
-                    </userDefinedRuntimeAttributes>
-                </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bills-illustration" translatesAutoresizingMaskIntoConstraints="NO" id="ula-a8-tAA">
-                    <rect key="frame" x="30" y="306" width="354" height="169.66666666666663"/>
+                    <rect key="frame" x="50" y="125" width="220" height="220"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="ula-a8-tAA" secondAttribute="height" multiplier="25:12" id="aEb-hK-5W3"/>
+                        <constraint firstAttribute="width" secondItem="ula-a8-tAA" secondAttribute="height" multiplier="1:1" id="aEb-hK-5W3"/>
                     </constraints>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8h-3w-qwg">
+                    <rect key="frame" x="30" y="377" width="260" height="39"/>
+                    <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                    </userDefinedRuntimeAttributes>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="M11-1q-Tet" firstAttribute="top" secondItem="w8h-3w-qwg" secondAttribute="bottom" constant="29.5" id="100-1E-41u"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="leading" secondItem="ula-a8-tAA" secondAttribute="leading" constant="-30" id="20x-jt-coT"/>
-                <constraint firstItem="w8h-3w-qwg" firstAttribute="centerX" secondItem="M11-1q-Tet" secondAttribute="centerX" id="DKS-Kt-LiT"/>
-                <constraint firstItem="ula-a8-tAA" firstAttribute="width" secondItem="ula-a8-tAA" secondAttribute="height" multiplier="25:12" id="PUm-yC-vyY"/>
-                <constraint firstItem="M11-1q-Tet" firstAttribute="leading" secondItem="ula-a8-tAA" secondAttribute="leading" id="T6W-aR-J2K"/>
-                <constraint firstItem="ula-a8-tAA" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="1.15" priority="250" id="Whb-q5-zjW"/>
-                <constraint firstItem="M11-1q-Tet" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="0.65" priority="750" id="XwM-VP-lE0"/>
+                <constraint firstItem="w8h-3w-qwg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="8qd-fl-Boy"/>
+                <constraint firstItem="w8h-3w-qwg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ula-a8-tAA" secondAttribute="bottom" constant="32" id="IAk-EJ-5CO"/>
+                <constraint firstItem="w8h-3w-qwg" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="1.2" priority="750" id="Sdr-uf-sFS"/>
+                <constraint firstItem="ula-a8-tAA" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="0.8" id="Whb-q5-zjW"/>
                 <constraint firstItem="ula-a8-tAA" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="aip-SH-2MC"/>
-                <constraint firstItem="w8h-3w-qwg" firstAttribute="leading" secondItem="M11-1q-Tet" secondAttribute="leading" id="cLc-r0-x9f"/>
-                <constraint firstItem="ula-a8-tAA" firstAttribute="top" relation="lessThanOrEqual" secondItem="M11-1q-Tet" secondAttribute="bottom" constant="50" id="hnV-PD-lms"/>
-                <constraint firstItem="ula-a8-tAA" firstAttribute="top" relation="greaterThanOrEqual" secondItem="M11-1q-Tet" secondAttribute="bottom" constant="10" id="j5f-fI-qka"/>
-                <constraint firstItem="M11-1q-Tet" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="qM9-NE-gsE"/>
+                <constraint firstItem="w8h-3w-qwg" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="ayw-sh-rUm"/>
+                <constraint firstItem="ula-a8-tAA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="50" id="eZp-GF-7fe"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
