--- a/Hawaii/UI/Storyboard/NewRequest/Summary.storyboard
+++ b/Hawaii/UI/Storyboard/NewRequest/Summary.storyboard
@@ -174,6 +174,7 @@
                         <outlet property="cardView" destination="3g8-fy-TXa" id="fMt-YX-xj5"/>
                         <outlet property="datesLabel" destination="laj-ty-XZV" id="xIu-n5-2UV"/>
                         <outlet property="datesRequiredTitle" destination="7dy-jx-vTI" id="QyN-5D-Ktr"/>
+                        <outlet property="dividor" destination="y8G-Wv-O9c" id="LpR-TH-4rQ"/>
                         <outlet property="leaveReasonLabel" destination="Dz2-RB-mlV" id="5c1-0b-jWv"/>
                         <outlet property="leaveRemainingConstraintTop" destination="zOy-fx-v8W" id="415-v1-AdZ"/>
                         <outlet property="leaveRemainingLabel" destination="itv-NI-Ma7" id="QGe-Lh-RtU"/>
