--- a/Hawaii/UI/Storyboard/More.storyboard
+++ b/Hawaii/UI/Storyboard/More.storyboard
@@ -10,6 +10,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Profile View Controller-->
+        <scene sceneID="xlE-lN-5bG">
+            <objects>
+                <viewController id="4Yk-u2-BpV" customClass="ProfileViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s4t-eL-hhP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ySo-QY-yPF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EUE-DK-8Iq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1588" y="199"/>
+        </scene>
         <!--More View Controller-->
         <scene sceneID="zkl-Av-sNd">
             <objects>
@@ -39,6 +54,7 @@
                         <segue destination="U85-Wx-gSk" kind="show" identifier="showTeamsManagement" id="IOj-KC-W7K"/>
                         <segue destination="43I-FY-JFI" kind="show" identifier="showHolidayManagement" id="1WW-V6-2gy"/>
                         <segue destination="il9-ck-xrw" kind="show" identifier="showLeaveProfilesManagement" id="y59-CM-boz"/>
+                        <segue destination="4Yk-u2-BpV" kind="show" identifier="editToken" id="SZP-CG-PzW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BSW-Gv-fRT" userLabel="First Responder" sceneMemberID="firstResponder"/>
