--- a/Hawaii/UI/Storyboard/EmployeeManagement/EmployeeManagement.storyboard
+++ b/Hawaii/UI/Storyboard/EmployeeManagement/EmployeeManagement.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Employee Menagement-->
+        <!--Employee Management-->
         <scene sceneID="3rw-SV-kUg">
             <objects>
                 <viewController id="GfJ-az-wia" customClass="UsersManagementViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,9 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="3Ti-Fg-vxA">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3Ti-Fg-vxA">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,7 +32,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jce-ad-WlR"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Employee Menagement" id="ITb-zz-Vb6"/>
+                    <navigationItem key="navigationItem" title="Employee Management" id="ITb-zz-Vb6"/>
                     <connections>
                         <outlet property="tableView" destination="3Ti-Fg-vxA" id="KCQ-WR-0Nj"/>
                         <segue destination="uit-T6-utU" kind="show" identifier="manageUser" id="4Ug-8i-Egn"/>
@@ -40,7 +40,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="83y-I2-QYK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3009" y="35"/>
+            <point key="canvasLocation" x="3948" y="34.632683658170919"/>
         </scene>
         <!--User-->
         <scene sceneID="b4X-0H-BAb">
@@ -56,7 +56,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N6R-Rx-b2E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3954" y="35"/>
+            <point key="canvasLocation" x="4892" y="34.632683658170919"/>
         </scene>
     </scenes>
 </document>
