Allowance screen implemenatation

--- a/Hawaii/UI/Cell/ProfileCell/ProfileTableViewCell.xib
+++ b/Hawaii/UI/Cell/ProfileCell/ProfileTableViewCell.xib
@@ -23,6 +23,9 @@
                         <rect key="frame" x="136" y="152" width="46.5" height="23"/>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                        </userDefinedRuntimeAttributes>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pB-11-0nZ">
                         <rect key="frame" x="99" y="16" width="120" height="120"/>
@@ -35,6 +38,9 @@
                         <rect key="frame" x="137" y="179" width="44" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                        </userDefinedRuntimeAttributes>
                     </label>
                 </subviews>
                 <constraints>
