--- a/Hawaii/UI/Storyboard/ProfileManagement/ProfileManagement.storyboard
+++ b/Hawaii/UI/Storyboard/ProfileManagement/ProfileManagement.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tUt-ra-MnB">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,63 +15,62 @@
             <objects>
                 <viewController id="GPv-Ar-ULB" customClass="PushTokenViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xEZ-gT-5YW">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5M6-uF-pQE">
-                                <rect key="frame" x="100" y="52" width="120" height="120"/>
+                                <rect key="frame" x="121" y="83.999999999999986" width="172" height="171.66666666666663"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="a3U-ER-M8T"/>
                                     <constraint firstAttribute="width" secondItem="5M6-uF-pQE" secondAttribute="height" multiplier="1:1" id="y3j-Kl-sk4"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hwB-ar-bVn">
-                                <rect key="frame" x="44" y="220" width="232" height="256"/>
+                                <rect key="frame" x="44" y="287.66666666666669" width="326" height="256.00000000000006"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vwJ-nM-TYN">
-                                        <rect key="frame" x="16" y="8" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="8" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSj-3s-v7S">
-                                        <rect key="frame" x="16" y="33" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="33" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bud-er-95M">
-                                        <rect key="frame" x="16" y="70" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="70" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B1j-j0-Dqb">
-                                        <rect key="frame" x="16" y="95" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="95" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="doS-Lo-izl">
-                                        <rect key="frame" x="16" y="132" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="132" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRl-lt-Hl0">
-                                        <rect key="frame" x="16" y="157" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="157" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OgK-9v-Yth">
-                                        <rect key="frame" x="16" y="194" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="194" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="urV-Dm-kcq">
-                                        <rect key="frame" x="16" y="219" width="200" height="21"/>
+                                        <rect key="frame" x="16" y="219" width="294" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -111,10 +110,11 @@
                         <constraints>
                             <constraint firstItem="5M6-uF-pQE" firstAttribute="centerX" secondItem="Puj-hy-Rd2" secondAttribute="centerX" id="2mA-ra-YzC"/>
                             <constraint firstItem="5M6-uF-pQE" firstAttribute="width" secondItem="5M6-uF-pQE" secondAttribute="height" multiplier="1:1" id="8GP-9r-seM"/>
-                            <constraint firstItem="5M6-uF-pQE" firstAttribute="top" secondItem="Puj-hy-Rd2" secondAttribute="top" constant="32" id="Hvq-3x-08R"/>
+                            <constraint firstItem="hwB-ar-bVn" firstAttribute="centerY" secondItem="Puj-hy-Rd2" secondAttribute="centerY" multiplier="1.1" id="CUo-bR-VuX"/>
+                            <constraint firstItem="5M6-uF-pQE" firstAttribute="top" secondItem="Puj-hy-Rd2" secondAttribute="top" constant="64" id="IGv-xa-TBb"/>
                             <constraint firstItem="hwB-ar-bVn" firstAttribute="leading" secondItem="Puj-hy-Rd2" secondAttribute="leading" constant="44" id="dHg-s7-Hnm"/>
                             <constraint firstItem="hwB-ar-bVn" firstAttribute="centerX" secondItem="Puj-hy-Rd2" secondAttribute="centerX" id="uf8-dF-6n5"/>
-                            <constraint firstItem="hwB-ar-bVn" firstAttribute="top" secondItem="5M6-uF-pQE" secondAttribute="bottom" constant="48" id="zu5-TA-9pM"/>
+                            <constraint firstItem="hwB-ar-bVn" firstAttribute="top" secondItem="5M6-uF-pQE" secondAttribute="bottom" constant="32" id="zu5-TA-9pM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Puj-hy-Rd2"/>
                     </view>
@@ -139,7 +139,7 @@
             <objects>
                 <viewController id="tUt-ra-MnB" customClass="ProfileViewController" customModule="Hawaii" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UPW-KA-lQw">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="R9i-s7-eop"/>
